# builderz-royalty-redemption-program

./: .gitignore  .solitarc.js  3AVVU8NE28yhpZwrLv615kEP28i8t4buLfocAhhR7qQ5_mint_accounts.json  Anchor.toml  README.md  kinobi.js  package-lock.json  package.json
clients/js/: package.json
idl/: repay_royalties_contract.json  royalty_redemptions.json
programs/repay_royalties_contract/: Cargo.toml
programs/repay_royalties_contract/src/: errors.rs  lib.rs  state.rs
programs/repay_royalties_contract/src/instructions/: mod.rs  repay_royalties.rs
programs/royalty_redemptions/: Cargo.toml
sdk/: package.json  tsconfig.json
tests/: repay_royalties_contract.ts
