[package]
name = "royalty_redemptions"
version = "0.1.0"
description = "Program to facilitate NFT royalty redemptions "
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "royalty_redemptions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = "0.27.0"
mpl-token-metadata = { version = "1.11.0", features = ["no-entrypoint"]  }
